alteração na estilizaçao

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                         <input id="calcular" type="submit" value="Calcular"></input>
                     </div>
                     <div class="resultados">
-                        <span id="result"></span>
+                        <span id="result"></span> 
+                        <span id="mensagem"></span>
                     </div>
                 </div>
             </form>
