reparo no javascript e alteraçao de estilo

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     </div>
                     <div class="input">
                         <label for="altura">Altura:</label>
-                        <input type="number" step="0.01" name="altura" id="altura" placeholder="Insira sua altura">
+                        <input type="number" step="0.01" name="altura" id="altura" placeholder="Insira sua altura (ex: 1.71)">
                     </div>
                     <div class="input">
                         <label for="peso">Peso:</label>
-                        <input type="number" name="peso" id="peso" placeholder="Insira seu peso">
+                        <input type="number" name="peso" id="peso" placeholder="Insira seu peso (ex: 60.0)">
                     </div >
                     <div class="btn-style">
                         <input id="calcular" type="submit" value="Calcular"></input>
